Key will now be send in PEM format.